# cis1912-jarvis

./: README.md  compose.yaml
backend/services/auth/: main.py  pyproject.toml
backend/services/auth/app/: __init__.py  config.py
backend/services/auth/app/models/: __init__.py  db.py  user.py
backend/services/auth/app/routers/: __init__.py  auth.py
backend/services/auth/app/schemas/: user.py
backend/services/auth/app/services/: __init__.py  auth.py
backend/services/notes/: pyproject.toml
backend/services/notes/app/: __init__.py  config.py
backend/services/notes/app/models/: __init__.py  notes.py
backend/services/notes/app/routers/: __init__.py  notes.py
backend/services/notes/app/schemas/: __init__.py  notes.py
backend/services/notes/app/services/: __init__.py  notes.py
backend/utilities/: pyproject.toml
backend/utilities/shared/: __init__.py  auth_client.py  config.py  database.py
backend/utilities/shared/schemas/: __init__.py  user.py
frontend/: package-lock.json  package.json
frontend/app/: App.tsx  globals.css  layout.tsx  page.tsx
frontend/app/components/: BaseSidebarView.tsx  ChatArea.tsx  Message.tsx  NotesDetailView.tsx  NotesListView.tsx  NotesPage.tsx  Sidebar.tsx
frontend/app/config/: api.ts
frontend/app/contexts/: NavigationContext.tsx
frontend/app/hooks/: useChatSocket.ts
frontend/app/lib/: api.ts  tokenUtils.ts
frontend/app/services/: authService.ts  chatService.ts  noteService.ts
frontend/app/stores/: chatStore.ts  noteStore.ts  profileStore.ts
frontend/app/types/: auth.ts  chat.ts  note.ts
(+10 files in other folders)
