[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities and schemas for Jarvis microservices"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "pydantic-ai>=0.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
